# COVIDAgentModel

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.CPU  Dockerfile.baseCPU  Makefile  README.md  runClangFormat.sh
MATLAB/: define_agents_epidemic.m  define_locations_epidemic_1.m  define_type_1_epid.m  define_types_epidemic.m  determine_object_width_from_area.m  disease_progression_related_agent_state_update.m  display_agents.m  display_epidemic_curves.m  display_locations.m  epidemic_model_2020_main.m  infection_related_agent_state_update.m  update_agent_locations.m  update_agent_states.m  update_agent_type_1_location.m  update_agents_epidemic.m  weekend_or_not_epidemic.m
Release/: create_makefile.sh
cmake/config/in/: configTypes.h.in
include/: LocationStats.h  agent.h  agentsHandler.h  agentsList.h  basicStats.h  datatypes.h  immunization.h  location.h  locationList.h  simulation.h  statistics.h  typeConfig.h
include/IO/: JSONDecoder.h  inputJSON.h  programParameters.h
include/IO/dataProviders/: dataProvider.h
include/IO/inputFormats/: agentTypesFormat.h  agentsFormat.h  closuresFormat.h  configRandomFormat.h  locationTypesFormat.h  locationsFormat.h  parametersFormat.h  progressionConfigFormat.h  progressionMatrixFormat.h  transitions.h
include/IO/outputs/: JSONWriter.h
include/agentData/: PPStateSIR.h  PPStateTypes.h  agentMeta.h  agentStats.h  agentType.h  dynamicPPState.h  globalStates.h
include/agentData/PPStates/: PPStateSIRBasic.h  PPStateSIRextended.h
include/infectionPolicies/: basicInfection.h
include/movementPolicies/: noMovement.h
include/planningPolicy/: noPlanning.h
include/policies/: closurePolicies.h  diseaseProgressionPolicies.h  infectionPolicies.h  movementPolicies.h  planningPolicies.h  testingPolicies.h
include/tools/: customExceptions.h  devMemory.h  devObject.h  markovChain.h  operators.h  optional.h  randomGenerator.h  smallTools.h  timeDay.h  timeHandler.h  timing.h  transitionMatrix.h  util.h
include/tools/progressionMatrices/: abstractMatrix.h  basicLengthAbstract.h  multiBadMatrix.h  singleBadMatrix.h
inputFiles/: README.md  agentTypes.json  agents.json  closureRules.json  config.json  configRandom.json  generate_transition.m  locationTypes.json  locations.json  parameters_old.json  progression.json  transition.json  transition_final.json  transition_healthy.m
inputFiles/KamiData/: locations.json
inputFiles/progressions/: transition_config.json  transition_illness0_1.json  transition_illness0_2.json  transition_illness0_3.json  transition_illness0_4.json  transition_illness0_5.json  transition_illness0_6.json  transition_illness0_7.json  transition_illness1_1.json  transition_illness1_2.json  transition_illness1_3.json  transition_illness1_4.json  transition_illness1_5.json  transition_illness1_6.json  transition_illness1_7.json  transition_illness2_1.json  transition_illness2_2.json  transition_illness2_3.json  transition_illness2_4.json  transition_illness2_5.json  transition_illness2_6.json  transition_illness2_7.json  transition_illness3_1.json  transition_illness3_2.json  transition_illness3_3.json  transition_illness3_4.json  transition_illness3_5.json  transition_illness3_6.json  transition_illness3_7.json  transition_illness4_1.json  transition_illness4_2.json  transition_illness4_3.json  transition_illness4_4.json  transition_illness4_5.json  transition_illness4_6.json  transition_illness4_7.json
inputFiles/statistics_creator/: .gitignore  go.mod  main.go  output.json
inputFiles/statistics_creator/creator/: configRandom.go  increment.go  mapTool.go  percentages.go  types.go
inputFiles/statistics_creator/utils/: logger.go
src/: agentsList.cpp  main.cpp
src/IO/dataProviders/: dataProvider.cpp  progressionType.cpp
src/IO/outputs/: JSONWriter.cpp  agentStatOutput.cpp
src/agentData/: PPStateTypes.cpp  agentMeta.cpp  agentStat.cpp  agentType.cpp  dynamicPPState.cpp  globalStates.cpp
src/agentData/PPStates/: PPStateSIRBasic.cpp  PPStateSIRextended.cpp
src/tools/: operators.cpp  randomGenerator.cpp  timeDay.cpp  timeHandler.cpp  timing.cpp  util.cpp
src/tools/progressionMatrices/: basicLengthAbstract.cpp  multiBadMatrix.cpp  singleBadMatrix.cpp
